# MSSPlace

./: .gitignore  .gitmodules  README.md  evaluate_checkpoints.py  parse_wandb.ipynb  pyproject.toml  requirements.txt  test.py  test_multimodal.ipynb  train_unimodal.py
.github/: copilot-instructions.md
configs/: train_unimodal.yaml
configs/dataset/nclt/: all_camera_lidar.yaml  all_camera_semantic.yaml  all_camera_semantic_lidar.yaml  all_camera_semantic_text.yaml  all_camera_semantic_text_lidar.yaml  all_camera_text.yaml  all_camera_text_lidar.yaml  camera1.yaml  camera1_lidar.yaml  camera2-front-back.yaml  camera5.yaml  (+18 more)
configs/model/: camera1.yaml  camera2_add.yaml  camera2_concat.yaml  camera2_mlp-full.yaml  camera2_mlp-half.yaml  camera2_sa-add.yaml  camera2_sa-concat.yaml  convnext_camera1.yaml  convnext_semantic1.yaml  minkloc-multimodal.yaml  mssplace-lis.yaml  mssplace-list.yaml  mssplace-lit.yaml  semantic1.yaml  semantic2_add.yaml  semantic2_concat.yaml  semantic2_mlp-full.yaml  semantic2_mlp-half.yaml  semantic2_sa-add.yaml  semantic2_sa-concat.yaml  text1_clip-base-mlp.yaml  text1_clip-large-mlp.yaml  text1_tfidf-mlp.yaml  text2_clip-base-mlp-add.yaml  text2_clip-base-mlp-concat.yaml  text2_clip-large-mlp-add.yaml  text2_clip-large-mlp-concat.yaml  text2_tfidf-mlp-add.yaml  text2_tfidf-mlp-concat.yaml
configs/sampler/: batch_sampler.yaml
docker/: Dockerfile.cuda  build.sh  into.sh  start.sh
scripts/evaluation/: evaluate_checkpoints.py  failure_cases.ipynb
src/: datasets.py  models.py
src/mssplace/: modality_interaction_layers.py  models.py
(+29 files in other folders)
